// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`golden-master: loadRoundResults on frozen prod rounds > round 148 — GOBS Stableford, mixed tees, BLIND DRAW (gross-anchored) > full canonical output matches the frozen snapshot (drift guard) 1`] = `
{
  "format": "gobs_stableford",
  "maxThru": 18,
  "teams": [
    {
      "b9": 38,
      "blindDraws": [
        {
          "drawn": "Dan G",
          "fromTeam": 3,
          "netValue": 41,
          "range": [
            1,
            18,
          ],
        },
      ],
      "f9": 34,
      "placeLabel": "1st of 7",
      "players": [
        {
          "gross": 82,
          "holesPlayed": 18,
          "name": "Kevin I",
          "net": 31,
          "netValue": 31,
        },
      ],
      "rank": 1,
      "roster": "Kevin I",
      "teamNumber": 1,
      "total": 72,
      "totalLabel": "72 pts",
    },
    {
      "b9": 36,
      "blindDraws": [],
      "f9": 30,
      "placeLabel": "2nd of 7",
      "players": [
        {
          "gross": 78,
          "holesPlayed": 18,
          "name": "Dan G",
          "net": 41,
          "netValue": 41,
        },
        {
          "gross": 89,
          "holesPlayed": 18,
          "name": "Thomas Y",
          "net": 25,
          "netValue": 25,
        },
      ],
      "rank": 2,
      "roster": "Dan G · Thomas Y",
      "teamNumber": 3,
      "total": 66,
      "totalLabel": "66 pts",
    },
    {
      "b9": 33,
      "blindDraws": [],
      "f9": 30,
      "placeLabel": "T3 of 7",
      "players": [
        {
          "gross": 96,
          "holesPlayed": 18,
          "name": "Nils L",
          "net": 29,
          "netValue": 29,
        },
        {
          "gross": 97,
          "holesPlayed": 18,
          "name": "Greg W",
          "net": 34,
          "netValue": 34,
        },
      ],
      "rank": 3,
      "roster": "Nils L · Greg W",
      "teamNumber": 2,
      "total": 63,
      "totalLabel": "63 pts",
    },
    {
      "b9": 27,
      "blindDraws": [],
      "f9": 36,
      "placeLabel": "T3 of 7",
      "players": [
        {
          "gross": 90,
          "holesPlayed": 18,
          "name": "Wayne H",
          "net": 30,
          "netValue": 30,
        },
        {
          "gross": 100,
          "holesPlayed": 18,
          "name": "Don D",
          "net": 33,
          "netValue": 33,
        },
      ],
      "rank": 3,
      "roster": "Wayne H · Don D",
      "teamNumber": 4,
      "total": 63,
      "totalLabel": "63 pts",
    },
    {
      "b9": 20,
      "blindDraws": [],
      "f9": 33,
      "placeLabel": "5th of 7",
      "players": [
        {
          "gross": 95,
          "holesPlayed": 18,
          "name": "Bill T",
          "net": 32,
          "netValue": 32,
        },
        {
          "gross": 95,
          "holesPlayed": 18,
          "name": "Mark J",
          "net": 21,
          "netValue": 21,
        },
      ],
      "rank": 5,
      "roster": "Bill T · Mark J",
      "teamNumber": 5,
      "total": 53,
      "totalLabel": "53 pts",
    },
    {
      "b9": 22,
      "blindDraws": [],
      "f9": 24,
      "placeLabel": "6th of 7",
      "players": [
        {
          "gross": 88,
          "holesPlayed": 18,
          "name": "Wayne V",
          "net": 22,
          "netValue": 22,
        },
        {
          "gross": 96,
          "holesPlayed": 18,
          "name": "Pat T",
          "net": 24,
          "netValue": 24,
        },
      ],
      "rank": 6,
      "roster": "Wayne V · Pat T",
      "teamNumber": 6,
      "total": 46,
      "totalLabel": "46 pts",
    },
    {
      "b9": 27,
      "blindDraws": [],
      "f9": 15,
      "placeLabel": "7th of 7",
      "players": [
        {
          "gross": 105,
          "holesPlayed": 18,
          "name": "Rick C",
          "net": 8,
          "netValue": 8,
        },
        {
          "gross": 82,
          "holesPlayed": 18,
          "name": "Chuck B",
          "net": 34,
          "netValue": 34,
        },
      ],
      "rank": 7,
      "roster": "Rick C · Chuck B",
      "teamNumber": 7,
      "total": 42,
      "totalLabel": "42 pts",
    },
  ],
}
`;

exports[`golden-master: loadRoundResults on frozen prod rounds > round 157 — Best Ball, net best-1, override holes 5/16 (gross-anchored) > full canonical output matches the frozen snapshot (drift guard) 1`] = `
{
  "format": "best_ball",
  "maxThru": 18,
  "teams": [
    {
      "b9": -5,
      "blindDraws": [],
      "f9": -7,
      "placeLabel": "1st of 6",
      "players": [
        {
          "gross": 80,
          "holesPlayed": 18,
          "name": "Kurt H",
          "net": 73,
          "netValue": 1,
        },
        {
          "gross": 103,
          "holesPlayed": 18,
          "name": "Greg W",
          "net": 78,
          "netValue": 6,
        },
        {
          "gross": 86,
          "holesPlayed": 18,
          "name": "Wayne H",
          "net": 70,
          "netValue": -2,
        },
      ],
      "rank": 1,
      "roster": "Kurt H · Greg W · Wayne H",
      "teamNumber": 1,
      "total": -12,
      "totalLabel": "−12",
    },
    {
      "b9": -6,
      "blindDraws": [],
      "f9": -4,
      "placeLabel": "2nd of 6",
      "players": [
        {
          "gross": 82,
          "holesPlayed": 18,
          "name": "Sandy F",
          "net": 71,
          "netValue": -1,
        },
        {
          "gross": 77,
          "holesPlayed": 18,
          "name": "Ward C",
          "net": 67,
          "netValue": -5,
        },
        {
          "gross": 88,
          "holesPlayed": 18,
          "name": "Thomas Y",
          "net": 76,
          "netValue": 4,
        },
      ],
      "rank": 2,
      "roster": "Sandy F · Ward C · Thomas Y",
      "teamNumber": 5,
      "total": -10,
      "totalLabel": "−10",
    },
    {
      "b9": -4,
      "blindDraws": [],
      "f9": -1,
      "placeLabel": "3rd of 6",
      "players": [
        {
          "gross": 78,
          "holesPlayed": 18,
          "name": "Kevin I",
          "net": 69,
          "netValue": -3,
        },
        {
          "gross": 94,
          "holesPlayed": 18,
          "name": "Hunter L",
          "net": 79,
          "netValue": 7,
        },
        {
          "gross": 101,
          "holesPlayed": 18,
          "name": "Pat T",
          "net": 80,
          "netValue": 8,
        },
      ],
      "rank": 3,
      "roster": "Kevin I · Hunter L · Pat T",
      "teamNumber": 2,
      "total": -5,
      "totalLabel": "−5",
    },
    {
      "b9": -3,
      "blindDraws": [],
      "f9": -1,
      "placeLabel": "T4 of 6",
      "players": [
        {
          "gross": 105,
          "holesPlayed": 18,
          "name": "Bob P",
          "net": 88,
          "netValue": 16,
        },
        {
          "gross": 102,
          "holesPlayed": 18,
          "name": "Russ C",
          "net": 82,
          "netValue": 10,
        },
        {
          "gross": 94,
          "holesPlayed": 18,
          "name": "Don D",
          "net": 68,
          "netValue": -4,
        },
      ],
      "rank": 4,
      "roster": "Bob P · Russ C · Don D",
      "teamNumber": 4,
      "total": -4,
      "totalLabel": "−4",
    },
    {
      "b9": -1,
      "blindDraws": [],
      "f9": -3,
      "placeLabel": "T4 of 6",
      "players": [
        {
          "gross": 94,
          "holesPlayed": 18,
          "name": "Eddie A",
          "net": 71,
          "netValue": -1,
        },
        {
          "gross": 87,
          "holesPlayed": 18,
          "name": "Gary S",
          "net": 75,
          "netValue": 3,
        },
        {
          "gross": 82,
          "holesPlayed": 18,
          "name": "Tim G",
          "net": 76,
          "netValue": 4,
        },
      ],
      "rank": 4,
      "roster": "Eddie A · Gary S · Tim G",
      "teamNumber": 6,
      "total": -4,
      "totalLabel": "−4",
    },
    {
      "b9": -1,
      "blindDraws": [],
      "f9": 0,
      "placeLabel": "6th of 6",
      "players": [
        {
          "gross": 102,
          "holesPlayed": 18,
          "name": "Dan S",
          "net": 78,
          "netValue": 6,
        },
        {
          "gross": 99,
          "holesPlayed": 18,
          "name": "Rick C",
          "net": 81,
          "netValue": 9,
        },
        {
          "gross": 101,
          "holesPlayed": 18,
          "name": "Tony J",
          "net": 85,
          "netValue": 13,
        },
      ],
      "rank": 6,
      "roster": "Dan S · Rick C · Tony J",
      "teamNumber": 3,
      "total": -1,
      "totalLabel": "−1",
    },
  ],
}
`;

exports[`golden-master: loadRoundResults on frozen prod rounds > round 161 — 2-Ball, net best-2, BLIND DRAW (gross-anchored) > full canonical output matches the frozen snapshot (drift guard) 1`] = `
{
  "format": "2_ball",
  "maxThru": 18,
  "teams": [
    {
      "b9": -10,
      "blindDraws": [],
      "f9": -18,
      "placeLabel": "1st of 5",
      "players": [
        {
          "gross": 95,
          "holesPlayed": 18,
          "name": "Don D",
          "net": 70,
          "netValue": -2,
        },
        {
          "gross": 92,
          "holesPlayed": 18,
          "name": "Greg W",
          "net": 67,
          "netValue": -5,
        },
        {
          "gross": 80,
          "holesPlayed": 18,
          "name": "Kevin I",
          "net": 72,
          "netValue": 0,
        },
        {
          "gross": 84,
          "holesPlayed": 18,
          "name": "Sandy F",
          "net": 74,
          "netValue": 2,
        },
      ],
      "rank": 1,
      "roster": "Don D · Greg W · Kevin I · Sandy F",
      "teamNumber": 1,
      "total": -28,
      "totalLabel": "−28",
    },
    {
      "b9": -14,
      "blindDraws": [],
      "f9": -6,
      "placeLabel": "2nd of 5",
      "players": [
        {
          "gross": 93,
          "holesPlayed": 18,
          "name": "Eddie A",
          "net": 71,
          "netValue": -1,
        },
        {
          "gross": 82,
          "holesPlayed": 18,
          "name": "Tim G",
          "net": 76,
          "netValue": 4,
        },
        {
          "gross": 79,
          "holesPlayed": 18,
          "name": "Chuck B",
          "net": 67,
          "netValue": -5,
        },
        {
          "gross": 90,
          "holesPlayed": 18,
          "name": "Dan S",
          "net": 66,
          "netValue": -6,
        },
      ],
      "rank": 2,
      "roster": "Eddie A · Tim G · Chuck B · Dan S",
      "teamNumber": 5,
      "total": -20,
      "totalLabel": "−20",
    },
    {
      "b9": -8,
      "blindDraws": [],
      "f9": -9,
      "placeLabel": "3rd of 5",
      "players": [
        {
          "gross": 102,
          "holesPlayed": 18,
          "name": "Bill T",
          "net": 77,
          "netValue": 5,
        },
        {
          "gross": 97,
          "holesPlayed": 18,
          "name": "Pat T",
          "net": 76,
          "netValue": 4,
        },
        {
          "gross": 94,
          "holesPlayed": 18,
          "name": "Tony J",
          "net": 78,
          "netValue": 6,
        },
        {
          "gross": 81,
          "holesPlayed": 18,
          "name": "Gary S",
          "net": 69,
          "netValue": -3,
        },
      ],
      "rank": 3,
      "roster": "Bill T · Pat T · Tony J · Gary S",
      "teamNumber": 3,
      "total": -17,
      "totalLabel": "−17",
    },
    {
      "b9": -2,
      "blindDraws": [
        {
          "drawn": "Ron L",
          "fromTeam": 2,
          "netValue": -3,
          "range": [
            1,
            18,
          ],
        },
      ],
      "f9": -9,
      "placeLabel": "4th of 5",
      "players": [
        {
          "gross": 91,
          "holesPlayed": 18,
          "name": "Hunter L",
          "net": 75,
          "netValue": 3,
        },
        {
          "gross": 105,
          "holesPlayed": 18,
          "name": "Steve D",
          "net": 87,
          "netValue": 15,
        },
        {
          "gross": 84,
          "holesPlayed": 18,
          "name": "Ward C",
          "net": 75,
          "netValue": 3,
        },
      ],
      "rank": 4,
      "roster": "Hunter L · Steve D · Ward C",
      "teamNumber": 4,
      "total": -11,
      "totalLabel": "−11",
    },
    {
      "b9": -2,
      "blindDraws": [],
      "f9": -6,
      "placeLabel": "5th of 5",
      "players": [
        {
          "gross": 88,
          "holesPlayed": 18,
          "name": "Wayne H",
          "net": 73,
          "netValue": 1,
        },
        {
          "gross": 89,
          "holesPlayed": 18,
          "name": "Ron L",
          "net": 69,
          "netValue": -3,
        },
        {
          "gross": 93,
          "holesPlayed": 18,
          "name": "Bob P",
          "net": 76,
          "netValue": 4,
        },
        {
          "gross": 90,
          "holesPlayed": 18,
          "name": "Thomas Y",
          "net": 78,
          "netValue": 6,
        },
      ],
      "rank": 5,
      "roster": "Wayne H · Ron L · Bob P · Thomas Y",
      "teamNumber": 2,
      "total": -8,
      "totalLabel": "−8",
    },
  ],
}
`;

exports[`golden-master: loadRoundResults on frozen prod rounds > round 171 — 2-Ball, net best-2, override holes 9/12 (payout-anchored) > full canonical output matches the frozen snapshot (drift guard) 1`] = `
{
  "format": "2_ball",
  "maxThru": 18,
  "teams": [
    {
      "b9": -10,
      "blindDraws": [],
      "f9": -7,
      "placeLabel": "1st of 4",
      "players": [
        {
          "gross": 84,
          "holesPlayed": 18,
          "name": "Kevin I",
          "net": 76,
          "netValue": 4,
        },
        {
          "gross": 92,
          "holesPlayed": 18,
          "name": "Dave V",
          "net": 73,
          "netValue": 1,
        },
        {
          "gross": 87,
          "holesPlayed": 18,
          "name": "Thomas Y",
          "net": 74,
          "netValue": 2,
        },
        {
          "gross": 97,
          "holesPlayed": 18,
          "name": "Bill T",
          "net": 72,
          "netValue": 0,
        },
      ],
      "rank": 1,
      "roster": "Kevin I · Dave V · Thomas Y · Bill T",
      "teamNumber": 3,
      "total": -17,
      "totalLabel": "−17",
    },
    {
      "b9": -7,
      "blindDraws": [],
      "f9": -1,
      "placeLabel": "2nd of 4",
      "players": [
        {
          "gross": 106,
          "holesPlayed": 18,
          "name": "Jim M",
          "net": 76,
          "netValue": 4,
        },
        {
          "gross": 98,
          "holesPlayed": 18,
          "name": "Pat T",
          "net": 77,
          "netValue": 5,
        },
        {
          "gross": 87,
          "holesPlayed": 18,
          "name": "Ward C",
          "net": 79,
          "netValue": 7,
        },
        {
          "gross": 87,
          "holesPlayed": 18,
          "name": "Wayne H",
          "net": 73,
          "netValue": 1,
        },
      ],
      "rank": 2,
      "roster": "Jim M · Pat T · Ward C · Wayne H",
      "teamNumber": 1,
      "total": -8,
      "totalLabel": "−8",
    },
    {
      "b9": -4,
      "blindDraws": [],
      "f9": -3,
      "placeLabel": "3rd of 4",
      "players": [
        {
          "gross": 94,
          "holesPlayed": 18,
          "name": "Hunter L",
          "net": 78,
          "netValue": 6,
        },
        {
          "gross": 91,
          "holesPlayed": 18,
          "name": "Ron L",
          "net": 71,
          "netValue": -1,
        },
        {
          "gross": 97,
          "holesPlayed": 18,
          "name": "John M",
          "net": 76,
          "netValue": 4,
        },
        {
          "gross": 87,
          "holesPlayed": 18,
          "name": "Tim G",
          "net": 80,
          "netValue": 8,
        },
      ],
      "rank": 3,
      "roster": "Hunter L · Ron L · John M · Tim G",
      "teamNumber": 4,
      "total": -7,
      "totalLabel": "−7",
    },
    {
      "b9": 6,
      "blindDraws": [],
      "f9": -4,
      "placeLabel": "4th of 4",
      "players": [
        {
          "gross": 89,
          "holesPlayed": 18,
          "name": "Chuck B",
          "net": 78,
          "netValue": 6,
        },
        {
          "gross": 87,
          "holesPlayed": 18,
          "name": "Wayne V",
          "net": 80,
          "netValue": 8,
        },
        {
          "gross": 104,
          "holesPlayed": 18,
          "name": "Steve D",
          "net": 85,
          "netValue": 13,
        },
        {
          "gross": 91,
          "holesPlayed": 18,
          "name": "Drew Z",
          "net": 77,
          "netValue": 5,
        },
      ],
      "rank": 4,
      "roster": "Chuck B · Wayne V · Steve D · Drew Z",
      "teamNumber": 2,
      "total": 2,
      "totalLabel": "+2",
    },
  ],
}
`;
